# book-club

./: .gitignore  README.md  pyproject.toml
src/bookclub/: __init__.py  app.py  auth.py  database.py  models.py  schemas.py  seed_data.py  services.py
tests/: conftest.py  test_auth.py  test_books.py  test_lists.py  test_reviews.py
