[project]
name = "bookclub"
version = "1.0.0"
description = "A team book club service for tracking books, reading lists, and reviews."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.2",
    "httpx>=0.25.2",
]

[project.scripts]
bookclub = "bookclub.app:start"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-json-report>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
